[project]
name = "messenger-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Max-on-CoreiI7", email = "max@huzm.ru" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "typer>=0.20.0",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
